--- a/app/views/contacts/confirm.html.erb
+++ b/app/views/contacts/confirm.html.erb
@@ -5,9 +5,9 @@
   <%= form.hidden_field :email %>
   <%= form.hidden_field :content %>
 
-  <p>名前:<%= @contact.name %></p>
-  <p>Eメール:<%= @contact.email %></p>
-  <p>コンテンツ:<%= @contact.content %></p>
+  <p>Name:<%= @contact.name %></p>
+  <p>Email:<%= @contact.email %></p>
+  <p>Content:<%= @contact.content %></p>
   <%= form.submit  "登録する" %>
 <% end %>
 
