DropColumns,RenameDBTablename,AddCodingIndex.html.erb

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -12,15 +12,15 @@
       </ul>
     </div>
   <% end %>
-  
-  <div class="contact_title">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
-  <div class="contact_title">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
+
+  <!-- <div class="contact_title"> -->
+    <!-- <%= form.label :name %> -->
+    <!-- <%= form.text_field :name %> -->
+  <!-- </div> -->
+  <!-- <div class="contact_title"> -->
+    <!-- <%= form.label :email %> -->
+    <!-- <%= form.text_field :email %> -->
+  <!-- </div> -->
   <div class="contact_title">
     <%= form.label :content %>
     <%= form.text_field :content %>
