--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,6 +1,6 @@
 <h1>詳細</h1>
-<p>名前: <%= @contact.name %></p>
-<p>Eメール: <%= @contact.email %></p>
+<!-- <p>名前: <%= @contact.name %></p> -->
+<!-- <p>Eメール: <%= @contact.email %></p> -->
 <p>コンテント: <%= @contact.content %></p>
 
 <br>
