--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <header>
       <ul>
-        <li><a href="/tweets">Owatter</a></li>
+        <li><a href="/owatters">Owatter</a></li>
       </ul>
     </header>
 
