--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
     <%= yield %>
 
     <footer>
-      <p>運営会社DIVE INTO CODE株式会社</p>
-      <p>© 2015-2016 Copyright DIVE INTO CODE Corp.</p>
+      <p>運営会社STILL ISLAND株式会社</p>
+      <p>© 2018-2020 Copyright STILL ISLAND Corp.</p>
     </footer>
 
   </body>
