--- a/app/views/owatters/show.html.erb
+++ b/app/views/owatters/show.html.erb
@@ -1,5 +1,5 @@
-<h1>詳細</h1>
-<p>コンテンツ: <%= @owatter.content %></p>
+<h1>Details</h1>
+<p>Content: <%= @owatter.content %></p>
 
 <br>
-<%= link_to '一覧', owatters_path%>
+<%= link_to 'Back', owatters_path, class: "btn outline btn-danger" %>
