--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,32 @@
         <li><a href="/owatters">Owatter</a></li>
       </ul>
     </header>
-
+    <nav class="navbar navbar-default">
+     <div class="container-fluid">
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#gnavi">
+            <span class="sr-only">Owatter</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        <a class="navbar-brand"></a>
+      </div>
+      <div id="gnavi" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="#">profile</a></li>
+          <li><a href="/owatters/grave">grave</a></li>
+          <li><a href="#">contacts</a></li>
+        </ul>
+      </div>
+    </div>
+    </nav>
+    
     <%= yield %>
 
     <footer>
       <p>運営会社STILL ISLAND株式会社</p>
       <p>© 2018-2020 Copyright STILL ISLAND Corp.</p>
     </footer>
-
   </body>
 </html>
