--- a/app/views/owatters/index.html.erb
+++ b/app/views/owatters/index.html.erb
@@ -1,45 +1,22 @@
-<nav class="navbar navbar-default">
- <div class="container-fluid">
-   <div class="navbar-header">
-     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#gnavi">
-       <span class="sr-only">Owatter</span>
-       <span class="icon-bar"></span>
-       <span class="icon-bar"></span>
-       <span class="icon-bar"></span>
-     </button>
-     <a class="navbar-brand" href="#">Owatter</a>
-   </div>
-   <div id="gnavi" class="collapse navbar-collapse">
-     <ul class="nav navbar-nav">
-       <li><a href="#">top</a></li>
-       <li><a href="#">profile</a></li>
-       <li><a href="#">grave</a></li>
-       <li><a href="#">contacts</a></li>
-     </ul>
-   </div>
- </div>
-</nav>
-
- <h1>Index</h1>
-
-<p><%= notice %></p>
-<table>
-  <tr>
-    <th>contents</th>
-  </tr>
-
-<% @owatter.each do |owatter| %>
-  <tr>
-    <td><%= owatter.content %></td>
-    <td><%= link_to 'Detail', owatter_path(owatter.id)  %></td>
-    <td><%= link_to 'Edit', edit_owatter_path(owatter.id),data: { confirm: 'Can I really edit it?' } %></td>
-    <td><%= link_to 'Delete', owatter_path(owatter.id), method: :delete, data: { confirm: 'Can I really delete it?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br>
-
-<%= link_to 'Shout new!!', new_owatter_path, class: "btn outline btn-danger" %>
-
- <!-- http://localhost:3000/ -->
+<div class="container">
+  <h1>Index</h1>
+  <p><%= notice %></p>
+  <div class="table-responsive">
+    <table>
+      <tr>
+        <th>[content]</th>
+      </tr>
+      <% @owatter.each do |owatter| %>
+      <tr>
+        <td><%= owatter.content %></td>
+        <td><%= link_to 'Detail', owatter_path(owatter.id)  %></td>
+        <td><%= link_to 'Edit', edit_owatter_path(owatter.id),data: { confirm: 'Can I really edit it?' } %></td>
+        <td><%= link_to 'Delete', owatter_path(owatter.id), method: :delete, data: { confirm: 'Can I really delete it?' } %></td>
+      </tr>
+      <% end %>
+    </table>
+  </div>
+  <br>
+  <%= link_to 'Shout new!!', new_owatter_path, class: "btn btn-danger" %>
+</div>
+<!-- http://localhost:3000/ -->
