viewfile changes index.html.erb, grave.html.erb

--- a/app/views/owatters/grave.html.erb
+++ b/app/views/owatters/grave.html.erb
@@ -33,14 +33,16 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class="topic">
-            <ul class="row_B">
-              <li class="col-md-12">Hello</li>
-              <li class="col-md-12">Hello</li>
-              <li class="col-md-12">Hello</li>
-              <li class="col-md-12">Hello</li>
-              <li class="col-md-12">Hello</li>
-            </ul>
+          <div class="topics">
+            <div class="row_B">
+              <ul class="topic">
+                <li class="col-md-12">Hello</li>
+                <li class="col-md-12">Hello</li>
+                <li class="col-md-12">Hello</li>
+                <li class="col-md-12">Hello</li>
+                <li class="col-md-12">Hello</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
