--- a/app/assets/stylesheets/owatters.scss
+++ b/app/assets/stylesheets/owatters.scss
@@ -53,6 +53,11 @@ button, input, optgroup, select, textarea {
   margin: 5px;
 }
 
+.content, .topic{
+  list-style: none;
+  padding: 0px;
+}
+
 footer {
   width: 100%;
   background-color:#666;
