--- a/app/assets/stylesheets/owatters.scss
+++ b/app/assets/stylesheets/owatters.scss
@@ -66,7 +66,7 @@ footer {
   margin: auto;
   padding-bottom: 10px;
   font-size: 12px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
 }
 
