--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,12 +34,21 @@
       </div>
     </div>
     </nav>
-    
-    <%= yield %>
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
 
-    <footer>
-      <p>運営会社STILL ISLAND株式会社</p>
-      <p>© 2018-2020 Copyright STILL ISLAND Corp.</p>
-    </footer>
+    <% if logged_in? %>
+    <%= link_to "Profile", user_path(current_user.id) %>
+    <%= link_to "Logout", session_path(current_user.id), method: :delete %>
+    <% else %>
+    <%= link_to "Sign up", new_user_path %>
+    <%= link_to "Login", new_session_path %>
+    <% end %>
+    <%= yield %>
   </body>
+  <footer>
+    <p>運営会社STILL ISLAND株式会社</p>
+    <p>© 2018-2020 Copyright STILL ISLAND Corp.</p>
+  </footer>
 </html>
