--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,5 +24,5 @@
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
 
-  <%= f.submit "Create my account" %>
+  <%= f.submit "Create My Account" %>
 <% end %>
